# lib-guitar-dsp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: static-analysis.yml
include/: FFTProcessor.h  HybridPitchDetector.h  MpmPitchDetector.h  NoteConverter.h  PitchDetector.h  PitchStabilizer.h  YinPitchDetector.h
src/: FFTProcessor.cpp  HybridPitchDetector.cpp  MpmPitchDetector.cpp  NoteConverter.cpp  PitchDetector.cpp  PitchStabilizer.cpp  YinPitchDetector.cpp
